bynkc/tests/fixtures/negative/479_messages_outside_commons/src/ctx.bynk
context ctx {
  messages en @reference {
    "a" => "b"
  }
}
